--- a/Atividades/Atividade1/Atividade0.html
+++ b/Atividades/Atividade1/Atividade0.html
@@ -9,7 +9,7 @@
 
 <body><a href="../../index.php">Voltar</a>
    <header>
-      
+
       <section id="Links">
          <a href="Home"></a>
          <a href="Formulario"></a>
@@ -20,12 +20,40 @@
    <main>
 
       <form action="processa_formulario.php" method="post">
+         <!--Nome-->
+         <label for="nome">Nome Completo:</label>
          <input type="text" name="nome" id="nome" placeholder="Insira seu nome" required>
-         <input type="number" name="idade" id="idade" placeholder="Insira sua idade" required>
-         <input type="number" name="altura" id="altura" placeholder="Insira sua altura" step="0.01">
-         <input type="number" name="peso" id="peso" step="0.01" placeholder="Insira seu peso">
-         <input type="submit" name="enviar" id="enviar">
-         <input type="reset" name="redefinir" id="redefinir">
+         <br>
+
+         <!--DataNasc-->
+         <label for="dataNasc">Data de nascimento</label>
+         <input type="date" name="dataNasc" id="dataNasc" required>
+
+         <!--Idade
+         <label for="idade">Idade:</label>
+         <input type="number" name="idade" id="idade" placeholder="Insira sua idade" required> -->
+         <br>
+
+         <!--Altura-->
+         <label for="altura">Altura:</label>
+         <input type="number" name="altura" id="altura" placeholder="Insira sua altura" step="0.01" required>
+
+         <!--Peso-->
+         <label for="peso">Peso:</label>
+         <input type="number" name="peso" id="peso" step="0.01" placeholder="Insira seu peso" required>
+         <br>
+
+         <!--Sexo-->
+         <p style="margin: 0; padding: 0;">Sexo:</p>
+         <label for="fema">Feminino </label>
+         <input type="radio" name="sexo" id="fema" value="Feminino" required>
+         <label for="male">Masculino</label>
+         <input type="radio" name="sexo" id="male" value="Masculino" required>
+         <br>
+
+         <!--Botões-->
+         <input type="submit" name="enviar" id="Avaliar">
+         <input type="reset" name="redefinir" id="Limpar">
       </form>
 
    </main>
